--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ crossterm = "0.29.0"
 directories = "6.0.0"
 ratatui = "0.29.0"
 serde = { version = "1.0.219", features = ["derive"] }
+tui-input = "0.14.0"
 tui-tree-widget = "0.23.1"
