--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ ratatui = "0.29.0"
 serde = { version = "1.0.219", features = ["derive"] }
 tui-input = "0.14.0"
 tui-tree-widget = "0.23.1"
+uuid = "1.17.0"
