--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,17 @@
 [package]
 name = "gpm"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2024"
+authors = ["Anna Singleton<annabeths111@gmail.com>"]
+repository = "https://github.com/anna-singleton/gpm"
+description = "A workflow tool for managing git worktrees from your terminal"
+license = "MIT"
+
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
 
 [dependencies]
 confy = { version = "1.0.0", features = ["toml"] }
