--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gpm"
+name = "abn-gpm"
 version = "1.0.0"
 edition = "2024"
 authors = ["Anna Singleton<annabeths111@gmail.com>"]
